# web-genAI

./: .gitignore  DEPLOYMENT.md  DEVLOG.md  README.md  app.py  launcher.py  pyproject.toml  requirements.txt  start.bat  start.sh
.streamlit/: secrets.example.toml
scripts/: smoke_generation.py
