[project]
name = "ai-imageforge"
version = "1.1.0"
description = "Recoverable text-to-image demo with Hugging Face generation and local fallback rendering."
authors = [{ name = "AI-ImageForge Team" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
keywords = ["ai", "image-generation", "hugging-face", "streamlit"]
dependencies = [
    "streamlit>=1.30.0",
    "Pillow>=10.4.0",
    "requests>=2.28.0",
    "huggingface-hub>=1.0.0",
    "onnxruntime>=1.15.0",
]

[project.optional-dependencies]
amd = ["onnxruntime-directml>=1.15.0"]
nvidia = ["torch>=2.0.0"]
dev = ["pytest>=7.0.0", "black>=22.0.0", "ruff>=0.4.0"]

[project.urls]
Homepage = "https://github.com/ai-imageforge"
Repository = "https://github.com/ai-imageforge"

[tool.streamlit.server]
port = 8501
address = "localhost"
maxUploadSize = 200
maxMessageSize = 200

[tool.streamlit.theme]
primaryColor = "#FF6B6B"
backgroundColor = "#FFFFFF"
secondaryBackgroundColor = "#F0F2F6"
textColor = "#262730"

[tool.streamlit.browser]
gatherUsageStats = false

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
